tests/router/ui/stack_same_kind.stderr
error: #[command_handler] cannot coexist with #[command_handler] on the same impl; exactly one of #[command_handler] / #[saga] / #[process_manager] / #[projector] / #[upcaster] is allowed
 --> tests/router/ui/stack_same_kind.rs:7:1
  |
7 | #[command_handler(domain = "x", state = State)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `command_handler` (in Nightly builds, run with -Z macro-backtrace for more info)
